Improved Localization Updated Manifest Added Consume toggle Added menu opening for totems

--- a/WarpNetwork/i18n/default.json
+++ b/WarpNetwork/i18n/default.json
@@ -13,5 +13,10 @@
   "cfg-obeliskpatch.label": "Patch Vanilla Obelisks",
   "cfg-obeliskpatch.desc": "Override the warps on the vanilla obelisks to work with custom destination coordinates.",
   "cfg-menu.label": "Enable Warp Network Menu",
-  "cfg-menu.desc": "Enable the Warp Network menu. When this is disabled, the warp network can't be accessed from any of the statues."
+  "cfg-menu.desc": "Enable the Warp Network menu. When this is disabled, the warp network can't be accessed from any of the statues.",
+  "dest-farm": "Farm",
+  "dest-mountain": "Mountains",
+  "dest-beach": "Beach",
+  "dest-island": "Ginger Island",
+  "dest-desert": "Desert"
 }
