--- a/WarpNetwork/i18n/default.json
+++ b/WarpNetwork/i18n/default.json
@@ -1,6 +1,6 @@
 ﻿{
   "ui-fail": "Nothing happens...",
-  "ui-label": "Where would you like to go?",
+  "ui-label": "Choose Destination",
   "ui-cancel": "Cancel",
   "cfg-warpsenabled.label": "Vanilla Warps Enabled",
   "cfg-warpsenabled.desc": "When to enable the vanilla warps.",
