--- a/WarpNetwork/i18n/uk.json
+++ b/WarpNetwork/i18n/uk.json
@@ -4,22 +4,22 @@
   "ui-cancel": "Скасувати",
   "ui-usetotem": "Телепортуватися до \"{{Label}}\"?",
   "ui-usereturn": "Повернутися до останнього місцезнаходження?",
-  "cfg-warpsenabled.label": "Стандартні телепорації - увімк",
-  "cfg-warpsenabled.desc": "Якщо стандартні місця телепортації увімкнено.",
-  "cfg-farmenabled.label": "Фермова тедепортація - увімк",
-  "cfg-farmenabled.desc": "Якщо місце телепортації на фермі увімкнуто.",
-  "cfg-accessdisabled.label": "Доступ до вимкнених",
-  "cfg-accessdisabled.desc": "Доступ для мережі до вимкнених пунктів призначення.",
-  "cfg-accesswand.label": "Доступ від посоху повернення.",
-  "cfg-accesswand.desc": "Доступ для мережі, використовуючи посох повернення.",
-  "cfg-obeliskpatch.label": "Залатати стандартні обеліски телепортації.",
-  "cfg-obeliskpatch.desc": "Нехтування місцями телепортації стандартних обелісків для роботи з користувацькими пунктами призначення.",
-  "cfg-menu.label": "Увімкнути меню моду Warp Network",
-  "cfg-menu.desc": "Увімкнення меню моду Warp Network. Якщо воно вимкнено, жоден з обелісків не матиме доступ до телепортаційної мережі.",
-  "cfg-warpcancel.label": "Підтверджувати телепортування тотетом",
-  "cfg-warpcancel.desc": "Використовуючи тотем, підтвердьте, чи хочете ви його використовувати.",
-  "cfg-wandreturn.label": "Повернення після викор. посоха",
-  "cfg-wandreturn.desc": "Зберігає ваше місцезнаходження під час використання посоха та дозволяє вам телепортуватися назад до нього пізніше.",
+  "config.warpsenabled.label": "Стандартні телепорації - увімк",
+  "config.warpsenabled.desc": "Якщо стандартні місця телепортації увімкнено.",
+  "config.farmenabled.label": "Фермова тедепортація - увімк",
+  "config.farmenabled.desc": "Якщо місце телепортації на фермі увімкнуто.",
+  "config.accessdisabled.label": "Доступ до вимкнених",
+  "config.accessdisabled.desc": "Доступ для мережі до вимкнених пунктів призначення.",
+  "config.accesswand.label": "Доступ від посоху повернення.",
+  "config.accesswand.desc": "Доступ для мережі, використовуючи посох повернення.",
+  "config.obeliskpatch.label": "Залатати стандартні обеліски телепортації.",
+  "config.obeliskpatch.desc": "Нехтування місцями телепортації стандартних обелісків для роботи з користувацькими пунктами призначення.",
+  "config.menu.label": "Увімкнути меню моду Warp Network",
+  "config.menu.desc": "Увімкнення меню моду Warp Network. Якщо воно вимкнено, жоден з обелісків не матиме доступ до телепортаційної мережі.",
+  "config.warpcancel.label": "Підтверджувати телепортування тотетом",
+  "config.warpcancel.desc": "Використовуючи тотем, підтвердьте, чи хочете ви його використовувати.",
+  "config.wandreturn.label": "Повернення після викор. посоха",
+  "config.wandreturn.desc": "Зберігає ваше місцезнаходження під час використання посоха та дозволяє вам телепортуватися назад до нього пізніше.",
   "dest-farm": "Ферма",
   "dest-mountain": "Гори",
   "dest-beach": "Пляж",
