cleanup support custom obelisks

--- a/WarpNetwork/i18n/default.json
+++ b/WarpNetwork/i18n/default.json
@@ -5,9 +5,9 @@
   "ui-usetotem": "Warp to {{Label}}?",
   "ui-usereturn": "Return to last location?",
   "config.WarpsEnabled.label": "Vanilla Warps Enabled",
-  "config.WarpsEnabled.desc": "When to enable the vanilla warps.",
-  "config.FarmEnabled.label": "Farm Warp Enabled",
-  "config.FarmEnabled.desc": "When to enable the farm warp.",
+  "config.WarpsEnabled.desc": "When to enable warps.",
+  "config.FarmWarpEnabled.label": "Farm Warp Enabled",
+  "config.FarmWarpEnabled.desc": "When to enable the farm warp.",
   "config.AccessFromDisabled.label": "Access From Disabled",
   "config.AccessFromDisabled.desc": "Access the network from disabled destinations.",
   "config.AccessFromWand.label": "Access From Return Scepter",
@@ -20,10 +20,13 @@
   "config.WarpCancelEnabled.desc": "When using a totem, confirm whether or not you want to use it.",
   "config.WandReturnEnabled.label": "Return From Wand",
   "config.WandReturnEnabled.desc": "When using the wand, saves your position and allows you to teleport back to it later.",
-  "dest-farm": "Farm",
-  "dest-mountain": "Mountains",
-  "dest-beach": "Beach",
-  "dest-island": "Ginger Island",
-  "dest-desert": "Desert",
-  "dest-return": "Return"
+  "config.WarpEnabled.Always": "Always",
+  "config.WarpEnabled.Never": "Never",
+  "config.WarpEnabled.AfterObelisk": "After Obelisks",
+  "dest.farm": "Farm",
+  "dest.mountain": "Mountains",
+  "dest.beach": "Beach",
+  "dest.island": "Ginger Island",
+  "dest.desert": "Desert",
+  "dest.return": "Return"
 }
