--- a/WarpNetwork/i18n/pt.json
+++ b/WarpNetwork/i18n/pt.json
@@ -2,21 +2,21 @@
   "ui-fail": "Nada aconteceu...",
   "ui-label": "Pra onde gostaria de ir?",
   "ui-cancel": "Cancelar",
-  "config.warpsenabled.label": "Transporte Padrão Ativado",
-  "config.warpsenabled.desc": "Quando permitir os transportes padrão",
-  "config.farmenabled.label": "Transporte da Fazenda Ativado",
-  "config.farmenabled.desc": "Quando ativar os transportes padrão",
-  "config.accessdisabled.label": "Acessar De Desativado",
-  "config.accessdisabled.desc": "Acessar a rede de destinos desativados.",
-  "config.accesswand.label": "Acessar do Cetro de Retorno",
-  "config.accesswand.desc": "Acessar a rede usando o cetro de retorno.",
-  "config.obeliskpatch.label": "Corrigir Obeliscos padrão",
-  "config.obeliskpatch.desc": "Sobrepor os transportes dos obeliscos vanilla para usar coordenadas customizadas.",
-  "config.menu.label": "Ativar Menu da Rede de Transporte",
-  "config.menu.desc": "Ativar Menu da Rede de Transporte. Quando desativado, a rede de transporte não pode ser acessada por nenhuma das estátuas..",
-  "dest-farm": "Fazenda",
-  "dest-mountain": "Montanhas",
-  "dest-beach": "Praia",
-  "dest-island": "Ilha Gengibre",
-  "dest-desert": "Deserto"
+  "config.WarpsEnabled.label": "Transporte Padrão Ativado",
+  "config.WarpsEnabled.desc": "Quando permitir os transportes padrão",
+  "config.FarmWarpEnabled.label": "Transporte da Fazenda Ativado",
+  "config.FarmWarpEnabled.desc": "Quando ativar os transportes padrão",
+  "config.AccessFromDisabled.label": "Acessar De Desativado",
+  "config.AccessFromDisabled.desc": "Acessar a rede de destinos desativados.",
+  "config.AccessFromWand.label": "Acessar do Cetro de Retorno",
+  "config.AccessFromWand.desc": "Acessar a rede usando o cetro de retorno.",
+  "config.PatchObelisks.label": "Corrigir Obeliscos padrão",
+  "config.PatchObelisks.desc": "Sobrepor os transportes dos obeliscos vanilla para usar coordenadas customizadas.",
+  "config.MenuEnabled.label": "Ativar Menu da Rede de Transporte",
+  "config.MenuEnabled.desc": "Ativar Menu da Rede de Transporte. Quando desativado, a rede de transporte não pode ser acessada por nenhuma das estátuas..",
+  "dest.farm": "Fazenda",
+  "dest.mountain": "Montanhas",
+  "dest.beach": "Praia",
+  "dest.island": "Ilha Gengibre",
+  "dest.desert": "Deserto"
 }
