--- a/WarpNetwork/i18n/pt.json
+++ b/WarpNetwork/i18n/pt.json
@@ -2,21 +2,31 @@
   "ui-fail": "Nada aconteceu...",
   "ui-label": "Pra onde gostaria de ir?",
   "ui-cancel": "Cancelar",
-  "config.WarpsEnabled.label": "Transporte Padrão Ativado",
-  "config.WarpsEnabled.desc": "Quando permitir os transportes padrão",
-  "config.FarmWarpEnabled.label": "Transporte da Fazenda Ativado",
-  "config.FarmWarpEnabled.desc": "Quando ativar os transportes padrão",
-  "config.AccessFromDisabled.label": "Acessar De Desativado",
+  "ui-usetotem": "Teleportar para {{Label}}?",
+  "ui-usereturn": "Retornar a última localização?",
+  "config.WarpsEnabled.label": "Teleportes Vanilla Ativados",
+  "config.WarpsEnabled.desc": "Quando permitir os teleportes vanilla",
+  "config.FarmWarpEnabled.label": "Teleporte da Fazenda Ativado",
+  "config.FarmWarpEnabled.desc": "Quando ativar o teleporte da fazenda",
+  "config.AccessFromDisabled.label": "Acessar De Desativados",
   "config.AccessFromDisabled.desc": "Acessar a rede de destinos desativados.",
   "config.AccessFromWand.label": "Acessar do Cetro de Retorno",
   "config.AccessFromWand.desc": "Acessar a rede usando o cetro de retorno.",
-  "config.PatchObelisks.label": "Corrigir Obeliscos padrão",
-  "config.PatchObelisks.desc": "Sobrepor os transportes dos obeliscos vanilla para usar coordenadas customizadas.",
+  "config.PatchObelisks.label": "Corrigir Obeliscos Vanilla",
+  "config.PatchObelisks.desc": "Sobrepor os teleportes dos obeliscos vanilla para usar coordenadas customizadas.",
   "config.MenuEnabled.label": "Ativar Menu da Rede de Transporte",
-  "config.MenuEnabled.desc": "Ativar Menu da Rede de Transporte. Quando desativado, a rede de transporte não pode ser acessada por nenhuma das estátuas..",
+  "config.MenuEnabled.desc": "Ativar Menu da Rede de Transporte. Quando desativado, a rede de transporte não pode ser acessada por nenhuma estátua.",
+  "config.WarpCancelEnabled.label": "Confirmar Teleporte do Totem",
+  "config.WarpCancelEnabled.desc": "Quando usar um totem, confirmar se você quer usá-lo.",
+  "config.WandReturnEnabled.label": "Retornar Pelo Cetro",
+  "config.WandReturnEnabled.desc": "Quando usar o Cetro de Retorno, salva sua posição a the permite retornar a ela depois.",
+  "config.WarpEnabled.Always": "Sempre",
+  "config.WarpEnabled.Never": "Nunca",
+  "config.WarpEnabled.AfterObelisk": "Após Obeliscos",
   "dest.farm": "Fazenda",
   "dest.mountain": "Montanhas",
   "dest.beach": "Praia",
   "dest.island": "Ilha Gengibre",
-  "dest.desert": "Deserto"
+  "dest.desert": "Deserto",
+  "dest.return": "Retornar"
 }
