--- a/WarpNetwork/i18n/default.json
+++ b/WarpNetwork/i18n/default.json
@@ -6,8 +6,6 @@
   "ui-usereturn": "Return to last location?",
   "config.WarpsEnabled.label": "Vanilla Warps Enabled",
   "config.WarpsEnabled.desc": "When to enable warps.",
-  "config.FarmWarpEnabled.label": "Farm Warp Enabled",
-  "config.FarmWarpEnabled.desc": "When to enable the farm warp.",
   "config.AccessFromDisabled.label": "Access From Disabled",
   "config.AccessFromDisabled.desc": "Access the network from disabled destinations.",
   "config.AccessFromWand.label": "Access From Return Scepter",
@@ -22,7 +20,7 @@
   "config.WandReturnEnabled.desc": "When using the wand, saves your position and allows you to teleport back to it later.",
   "config.WarpEnabled.Always": "Always",
   "config.WarpEnabled.Never": "Never",
-  "config.WarpEnabled.AfterObelisk": "After Obelisks",
+  "config.WarpEnabled.Default": "Default",
   "dest.farm": "Farm",
   "dest.mountain": "Mountains",
   "dest.beach": "Beach",
